--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,11 @@
         <slf4j.version>1.7.25</slf4j.version>
         <junit.version>4.12</junit.version>
         <lombok.version>1.16.18</lombok.version>
-        <razor.version>0.0.5</razor.version>
+        <razor.version>0.0.6-SNAPSHOT</razor.version>
         <commonsio.version>1.3.2</commonsio.version>
+        <mybatis.version>3.4.5</mybatis.version>
+        <reflections.version>0.9.11</reflections.version>
+        <mysql.driver.version>6.0.6</mysql.driver.version>
         <project.scm.id>github</project.scm.id>
     </properties>
 
@@ -154,6 +157,24 @@
             <artifactId>commons-io</artifactId>
             <version>${commonsio.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>${mybatis.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>${reflections.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.driver.version}</version>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
