--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <slf4j.version>1.8.0-alpha2</slf4j.version>
         <junit.version>4.12</junit.version>
         <lombok.version>1.16.18</lombok.version>
-        <razor.version>0.0.6</razor.version>
+        <razor.version>0.0.7-SNAPSHOT</razor.version>
         <commonsio.version>1.3.2</commonsio.version>
         <mybatis.version>3.4.5</mybatis.version>
         <reflections.version>0.9.11</reflections.version>
