--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,9 @@ trim_trailing_whitespace = true
 [*.{js,jsx,css,less,scss,.xml}]
 indent_size = 4
 
+[*.xml]
+indent_size = 2
+
 # Markdown files
 [*.md]
 indent_size = 2
