--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,12 @@
             <!--<artifactId>log4j-over-slf4j</artifactId>-->
             <!--<version>${slf4j.version}</version>-->
         <!--</dependency>-->
+        <!-- https://mvnrepository.com/artifact/com.github.dozermapper/dozer-core -->
+        <dependency>
+          <groupId>com.github.dozermapper</groupId>
+          <artifactId>dozer-core</artifactId>
+          <version>6.1.0</version>
+        </dependency>
 
         <!-- Test -->
         <dependency>
