--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
         <reflections.version>0.9.11</reflections.version>
         <mysql.driver.version>6.0.6</mysql.driver.version>
         <jedis.version>2.9.0</jedis.version>
+        <simple.mail.version>4.4.5</simple.mail.version>
         <project.scm.id>github</project.scm.id>
     </properties>
 
@@ -189,6 +190,12 @@
           <groupId>redis.clients</groupId>
           <artifactId>jedis</artifactId>
           <version>${jedis.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.simplejavamail/simple-java-mail -->
+        <dependency>
+          <groupId>org.simplejavamail</groupId>
+          <artifactId>simple-java-mail</artifactId>
+          <version>${simple.mail.version}</version>
         </dependency>
 
       <!-- Log -->
