--- a/pom.xml
+++ b/pom.xml
@@ -229,8 +229,14 @@
           <artifactId>commons-logging</artifactId>
           <version>1.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.hankcs/hanlp -->
+        <dependency>
+          <groupId>com.hankcs</groupId>
+          <artifactId>hanlp</artifactId>
+          <version>portable-1.3.5</version>
+        </dependency>
 
-      <!-- Test -->
+        <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
